--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,11 @@
+body {
+background-color: black;
+color: white;
+}
+h1 {
+text-align: center;
+text-shadow: 4px 4px #cccccc;
+font-family: "Times New Roman", Georgia, Serif;
+color: white;
+}
 
